--- a/初识半撇私塾.md
+++ b/初识半撇私塾.md
@@ -1,10 +1,10 @@
 #  初识半撇私塾
 
-> 一次偶然的机会，让我认识到了半撇私塾这一项目制的在线新媒体大学。通过全栈新媒体人七天成长计划，让我更加深入了解关于新媒体运营一系列课程。由于之前在为学校的考试复习，虽然在上体验课时所有的视频课程都认真完成，半撇老师每天的直播答疑课也是准时听，但是在实际动手去操作的这一块还是存在很大的欠缺。
+> 一次偶然的机会，让我认识到了半撇私塾这一项目制的在线新媒体大学。通过全栈新媒体人七天成长计划，让我更加深入了解了关于新媒体运营一系列课程。由于之前在为学校的考试复习，虽然在上体验课时所有的视频课程都认真完成，半撇老师每天的直播答疑课也是准时听，但是在实际动手去操作的这一块还是存在很大的欠缺。
 
 ##  做，是最好的学
 
-* 很喜欢半撇的这句宣传语，虽然我在新媒体工作只有两年时间，但是在这两年里从一开始的电脑小白到现在对各种编辑器、高逼格的网站等略知一二的我，这一切都是一步步在实践中摸索出来的，只有真正动手去做才能把那些在视频教学上所接受的理论知识牢牢掌握。
+* 很喜欢半撇的这句宣传语，虽然已有运营学校的微信公众号两年的经历，但是都是基于一些基础，真正去学习新媒体、学习传播学、学习内容营销上还是存在很大的差距。但在这两年里从一开始的电脑小白到现在对各种编辑器、高逼格的网站等略知一二的我，这一切都是一步步在实践中摸索出来的，我更加明白了只有真正动手去做才能把那些在视频教学上所接受的理论知识牢牢掌握。
 
 ##  学习，是为了更好的创造
 
