--- a/初识半撇私塾.md
+++ b/初识半撇私塾.md
@@ -1,6 +1,6 @@
 #  初识半撇私塾
 
-> 一次偶然的机会，让我认识到了半撇私塾这一项目制的在线新媒体大学。通过全栈新媒体人七天成长计划，让我更加深入了解了关于新媒体运营一系列课程。由于之前在为学校的考试复习，虽然在上体验课时所有的视频课程都认真完成，半撇老师每天的直播答疑课也是准时听，但是在实际动手去操作的这一块还是存在很大的欠缺。
+> 一次偶然的机会，让我认识到了半撇私塾这一项目制的在线新媒体大学。通过参与全栈新媒体人七天成长计划的学习，让我新媒体运营等一系列课程有了初步的认识。由于之前在为学校的考试复习，虽然在上体验课时所有的视频课程都认真完成，半撇老师每天的直播答疑课也是准时听，但是在实际动手去操作的这一块还是存在很大的欠缺。
 
 ##  做，是最好的学
 
